20031203a: Changes since 20031129a:
- Cleanup: (nntpd) Avoid extraneous fflush() that causes the status line
  and the following input to be sent in separate packets, adding packet
  overhead. Add nntpprintf_as for this purpose.

20031129a: Changes since 20031122a:
- Cleanup: Remove global variable "current_server".
- Bugfix: The previous cleanup also reinstates only_group_pcre matching
  for posted articles. Reported against 20031001a by Jens Nixdorf.

20031122a: Changes since 20031028a:
- Feature: applyfilter -c checks in -n mode if filters would match the
  files (rather than newsgroups) given on the command line.
  Suggested by Reiner Steib.
- Feature: applyfilter can now handle more than one newsgroup argument.
- Bugfix: Do not post unless we have an active file. Avoids a crash
  reported by Robert Marshall.
- Cleanup: Fetch active file before trying to post.

20031028a: Changes since 20031026a:
- Bugfix: Change "ulong" to "unsigned long" to make the package compile
  on FreeBSD. Reported against 20031019a by Jack Raats.
- Cleanup: Use rbtrees rather than custom unbalanced binary tree for
  reading the local groups.  -45 lines of code.
- Update: libredblack now at 1.3.

20031026a: Changes since 20031019a:
- Change: log all warnings when verbosity is > 0
- Bugfix: do not interpret group name that starts with a dot as the end
  of server output (fetchnews).
- Bugfix: refuse to add newsgroups with NULL components (leading or
  trailing dot or two adjacent dots).
- Change: Improve error reporting when a server disconnects.

20031019a: Changes since 20031009a:
- Revamp applyfilter, now more robust.
- Reply 440 rather than 500 if user tries to POST in NOPOSTING mode.
- GROUP article number fixes, to avoid bogus new article "offering" in
  newsreader, reported by Reiner Steib.

20031009a: Changes since 20031001a:
- Bugfix: applyfilter no longer chokes on 0-sized articles and will
  unconditionally deleted them. Reported by Reiner Steib.